filling more info for sitter index and show pages as well as styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -17,6 +17,7 @@
  @import "./reset.scss";
 
  @import "./header.scss";
- @import "./loginsignup.scss"
+ @import "./loginsignup.scss";
+ @import "./sittershow.scss";
  
 
