finish styling booking index and sitter show

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,5 +19,7 @@
  @import "./header.scss";
  @import "./loginsignup.scss";
  @import "./sittershow.scss";
+ @import "./calendar.scss";
+ @import "./booking.scss"
  
 
