--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -69,3 +69,35 @@
 .left-nav i {
 	font-size: 15px;
 }
+
+.greeting {
+	text-decoration: none;
+	color: #FFFFFF;
+	background: none;
+	border: none;
+	font-family: Avenir,Helvetica Neue,Calibri,Helvetica,Roboto,sans-serif;
+	cursor: pointer;
+	font-size: 14px;
+}
+
+.slogan {
+	padding-top: 103px;
+	box-sizing: border-box;
+	width: 100%;
+}
+
+.slogan1 {
+	color: #f4f5f6;
+	font-size: 40px;
+	font-family: Avenir,Helvetica Neue,Calibri,Helvetica,Roboto,sans-serif;
+	font-weight: 900;
+	text-align: center;
+}
+
+.slogan2 {
+	color: #f4f5f6;
+	font-size: 32px;
+	font-family: Avenir,Helvetica Neue,Calibri,Helvetica,Roboto,sans-serif;
+	font-weight: 900;
+	text-align: center;
+}
