--- a/app/assets/stylesheets/loginsignup.scss
+++ b/app/assets/stylesheets/loginsignup.scss
@@ -153,3 +153,10 @@
 .left-nav-session i {
 	font-size: 15px;
 }
+
+.navbarlogout {
+    border: none;
+    color: #66727C;
+    font-family: Avenir,Helvetica Neue,Calibri,Helvetica,Roboto,sans-serif;
+    font-size: 14px;
+}
