finish styling for the most part and get ready to push to heroku

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,7 @@
  @import "./loginsignup.scss";
  @import "./sittershow.scss";
  @import "./calendar.scss";
- @import "./booking.scss"
+ @import "./booking.scss";
+ @import "./sittershow.scss";
  
 
