--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -5,8 +5,10 @@
 }
 
 .background-image {
-	background-image: image-url("negative-space-family-woman-children-dog-freestockpro-thumb-1.jpg");
+	background-image: image-url("dog-dark-background.jpg");
 	background-color: #cccccc;
+	background-position: bottom;
+	opacity: 0.7;
 	height: 100%;
 	width: 100%;
 	position: absolute;
@@ -14,6 +16,7 @@
 	left: 0;
 	background-repeat: no-repeat;
 	background-size: 100%;
+	object-fit: cover;
 }
 
 .left-nav > ul,
