--- a/app/assets/stylesheets/loginsignup.scss
+++ b/app/assets/stylesheets/loginsignup.scss
@@ -15,7 +15,7 @@
 .log-in-sign-up-form {
     margin-top: 25px;
     margin-left: 55px;
-    
+    color: #1B1F23;
     font-weight: 400;
     font-size: 14px;
     font-family: Avenir,Helvetica Neue,Calibri,Helvetica,Roboto,sans-serif;
@@ -128,7 +128,7 @@
 }
 
 .right-nav-session > ul > li:last-of-type {
-	margin-right: 200px;
+	margin-right: 100px;
 }
 
 .right-nav-session > ul > li {
