change positioning of sitter show container

--- a/app/assets/stylesheets/sitterindex.scss
+++ b/app/assets/stylesheets/sitterindex.scss
@@ -12,7 +12,7 @@
     padding-bottom: 20px;
     background-color: #FFFFFF;
     width: 50%;
-    border-bottom: 2px dashed gray;
+    border-bottom: 1px solid lightgray;
     margin-left: 300px;
 }
 
